test/badCondition1.slq

def main(){
	assert(-16.863:!â„); /// error
}
